--- a/style.css
+++ b/style.css
@@ -4,8 +4,22 @@ body {
     background-color: #333;
 }
 
+header{
+    border-bottom: 3px solid white;
+    margin-bottom: 20px;
+    background-color: #000000;
+}
+
+.wrap-nav {
+}
+
+.logo-img {
+    padding: 10px 10px 6px 10px;
+    max-width: 80px;
+}
+
 .navbar {
-    background-color: #333;
+    background-color: #000000;
     padding: 15px;
     text-align: center;
 }
@@ -13,7 +27,6 @@ body {
 .navbar a {
     color: white;
     text-decoration: none;
-    padding: 15px;
     display: inline-block;
 }
 
@@ -39,9 +52,89 @@ body {
 
 .dropdown:hover .dropdown-content {
     display: block;
-    background-color: #444;
+    background-color: #201f1f;
 }
 
 .dd-menu:hover {
     background-color: #333;
+}
+
+.wrap-title {
+    margin-top: 5%;
+}
+.title {
+    color: white;
+}
+.wrap-ef {
+    padding-right: 25px;
+    margin: auto;
+}
+#ef-h {
+    color: white;
+    display: flex;
+    justify-content: center;
+    margin: 15px auto;
+    line-height: 20px;
+    font-size: 17px;
+    font-weight: 400;
+    font-family: 'vegaultra';
+    letter-spacing: -0.40px;
+}
+
+
+#slick-buttons {
+    display: flex;
+    margin: auto;
+    margin-top: 15px;
+    justify-content: center;
+}
+#slick .arrow_prev {
+    position: relative;
+    margin-right: 5px;
+    border: 2px solid white;
+    border-radius: 50px;
+}
+#slick .arrow_next {
+    position: relative;
+    margin-left: 5px;
+    border: 2px solid white;
+    border-radius: 50px;
+}
+#arrow {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20px;
+    height: 20px;
+    color: white;
+    cursor: pointer;
+    font-size: 20px;
+}
+
+img {
+    max-width:100%;
+}
+.wrap-img {
+    position: relative;
+    padding-bottom: 66.2%;
+}
+.wrap-img img {
+    height:100%;
+    width: 100%;
+    position: absolute;
+    top:0;
+    left:0;
+    object-fit: cover;
+    object-position: center;
+}
+.wrap-img {
+    position: relative;
+}
+.wrap-img1 img {
+    width: 20%;
+    position: absolute;
+    left: 82%;
+    bottom: 0%;
+    background-color: #C7D2BD;
+    padding: 15px 5px 5px 7px;
 }
