--- a/style.css
+++ b/style.css
@@ -1,12 +1,8 @@
 body {
-    margin: 0;
-    font-family: 'Arial', sans-serif;
-    
+    margin-top: 105px;    
 }
 
 header{
-    padding: 10px;
-    margin-bottom: 15px;
     background-color: black;
 }
 main {
@@ -14,67 +10,94 @@ main {
     padding: 0px 18px;
 }
 
-.nav-dd {
-    padding-top: 5px;
-}
-
-.nav-a {
-    font-size: 20px;
-    background-color: black;
-    padding: 10px;
-    border-radius: 10px;
-}
-.nav-a:hover {
-    color: black;
-    background-color: white;
+.wrap-nav {
+    display: flex;
+    align-items: center;
 }
 
 .logo-img {
+    margin: 10px 0 0 10px;
     padding: 8px 8px 8px 8px;
     max-width: 80px;
     border-radius: 25px;
 }
 
+.nav-btn {
+    background-color: white;
+    color: black;
+    padding: 9px;
+    font-size: 16px;
+    border: none;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    margin-right: 10px;
+}
+.nav-btn:hover {
+    background-color: rgb(226, 225, 225);
+    color: black;
+}
+
+
+.navbar-fixed {
+    float:none ;
+    background-color: black;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+}
+
 .navbar {
     background-color: transparent;
-    padding: 15px;
     text-align: center;
 }
 
 .navbar a {
-    color: white;
+    color: rgb(0, 0, 0);
     text-decoration: none;
     display: inline-block;
 }
 
-.dropdown {
+.dropbtn {
+    background-color: white;
+    color: black;
+    padding: 12px;
+    font-size: 16px;
+    border: none;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .dropdown {
+    position: relative;
     display: inline-block;
-}
-
-.dropdown-content {
+  }
+  
+  .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #333;
+    background-color: #f1f1f1;
     min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-}
-
-.dropdown-content a {
-    color: white;
+  }
+  
+  .dropdown-content a {
+    color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-    
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-    background-color: #201f1f;
-}
-
-.dd-menu:hover {
-    background-color: #333;
-}
+  }
+  
+  .dropdown-content a:hover {background-color: #ddd;}
+  
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  .dropdown:hover .dropbtn {background-color: rgb(226, 225, 225);}
 
 /*********************************************************************/
 
@@ -134,30 +157,57 @@ main {
     font-size: 20px;
 }
 
+
 img {
-    max-width:100%;
+    border-radius: 25px;
 }
 .wrap-img {
     position: relative;
     padding-bottom: 66.2%;
 }
 .wrap-img img {
-    height:100%;
+    height: 95%;
     width: 100%;
     position: absolute;
-    top:0;
-    left:0;
     object-fit: cover;
     object-position: center;
 }
 .wrap-img {
     position: relative;
 }
-.wrap-img1 img {
-    width: 20%;
-    position: absolute;
-    left: 82%;
-    bottom: 0%;
-    background-color: #C7D2BD;
-    padding: 15px 5px 5px 7px;
+
+
+.threeArt {
+    margin-top: 20px;
 }
+
+
+article {
+    padding: 10px;
+    background-color: #575757;
+    color: rgb(255, 255, 255);
+    border-radius: 20px;
+    
+}
+article:hover {
+    background-color: #a3a3a3;
+    color: rgb(0, 0, 0);
+}
+
+.wrap-post {
+    margin-top: -5px;
+}
+.wrap-header {
+    margin-bottom: 20px;
+    font-size: 22px;
+}
+.wrap-postmeta {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    font-size: 14px;
+}
+
+
+
+
