--- a/style.css
+++ b/style.css
@@ -1,14 +1,34 @@
 body {
-    margin-top: 105px;    
+    margin-top: 95px;
+    background-color: #6E6E6E;
 }
 
 header{
     background-color: black;
 }
-main {
-    background-color: #333;
-    padding: 0px 18px;
+footer{
+    background-color: #77b408;
 }
+
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    font-size: 20px;
+    font-weight: 600;
+    background-color: #43fa27;
+    color: black;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 14px;
+    border: 1px solid black;
+} 
+#myBtn:hover {
+    background-color: #3a6f01;
+    color: white;
+}
+
 
 .wrap-nav {
     display: flex;
@@ -33,9 +53,10 @@ main {
     align-items: center;
     justify-content: center; 
     margin-right: 10px;
+    display: flex;
 }
 .nav-btn:hover {
-    background-color: rgb(226, 225, 225);
+    background-color: rgb(202, 202, 202);
     color: black;
 }
 
@@ -100,16 +121,17 @@ main {
   .dropdown:hover .dropbtn {background-color: rgb(226, 225, 225);}
 
 /*********************************************************************/
-
 .slick-carousel {
-    max-width: 1500px;
+    max-width: 1650px;
 }
 
 .wrap-title {
     margin-top: 5%;
 }
 .title {
-    color: white;
+    color:#BAFF39;
+    padding-left: 20px;
+    margin-bottom: -30px;
 }
 .wrap-ef {
     padding-right: 25px;
@@ -132,7 +154,7 @@ main {
     display: flex;
     margin: auto;
     margin-top: 15px;
-    justify-content: center;
+    justify-content: start;
 }
 #slick .arrow_prev {
     position: relative;
@@ -159,7 +181,7 @@ main {
 
 
 img {
-    border-radius: 25px;
+    border-radius: 16px;
 }
 .wrap-img {
     position: relative;
@@ -184,30 +206,49 @@ img {
 
 article {
     padding: 10px;
-    background-color: #575757;
+    background-color: #8b8b8b;
     color: rgb(255, 255, 255);
     border-radius: 20px;
-    
+    border: 2px solid rgb(51, 51, 51);
+}
+article img {
+    border: 1px solid gray;
+    border-radius: 25px;
 }
 article:hover {
-    background-color: #a3a3a3;
+    background-color: #a3e429;
     color: rgb(0, 0, 0);
 }
+
 
 .wrap-post {
     margin-top: -5px;
 }
 .wrap-header {
     margin-bottom: 20px;
-    font-size: 22px;
+    font-size: 24px;
 }
 .wrap-postmeta {
     display: flex;
     flex-direction: column;
     align-items: end;
-    font-size: 14px;
+    font-size: 16px;
+    font-weight: 700;
+}
+/*********************************************************************/
+
+.sub-banner {
+    background-color: #98e40c;
+    color: black;
+    display: flex;
+    justify-content: center;
+    margin: 30px;
+    padding: 8px;
+    font-size: 25px;
+    font-weight: 900;
+    border-radius: 15px;
 }
 
-
-
-
+.sub-banner a {
+    text-decoration: underline;
+}
