--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    margin-top: 95px;
+    margin-top: 85px;
     background-color: #6E6E6E;
 }
 
@@ -11,6 +11,12 @@ footer {
     color: white;
     padding-top: 20px;
     padding-bottom: 30px;
+}
+
+.columns {
+    margin-left: 0rem;
+    margin-right: 0rem;
+    margin-top: 0rem;
 }
 
 #myBtn {
@@ -35,7 +41,7 @@ footer {
 .wrap-nav {
     display: flex;
     align-items: center;
-    margin-left: 30px;
+    margin-left: 20px;
 }
 
 .logo-img {
@@ -62,7 +68,6 @@ footer {
     color: black;
 }
 
-
 .navbar-fixed {
     float: none;
     background-color: black;
@@ -70,6 +75,7 @@ footer {
     top: 0;
     width: 100%;
     z-index: 1;
+    margin-top: -20px;
 }
 
 .navbar {
@@ -125,6 +131,7 @@ footer {
 /*********************************************************************/
 .slick-carousel {
     max-width: 1650px;
+    margin-left: 4%;
 }
 
 .wrap-title {
@@ -209,18 +216,18 @@ img {
 }
 
 
-article {
+#art-one-style {
     padding: 10px;
     background-color: #8b8b8b;
     color: rgb(255, 255, 255);
     border-radius: 20px;
     border: 2px solid rgb(51, 51, 51);
 }
-article img {
+#art-one-style img {
     border: 1px solid gray;
     border-radius: 25px;
 }
-article:hover {
+#art-one-style:hover {
     background-color: #a3e429;
     color: rgb(0, 0, 0);
 }
