--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    padding-top: 80px;
+    padding-top: 70px;
     background-color: #6E6E6E;
 }
 
@@ -9,8 +9,7 @@ header{
 footer {
     background-color: #6ea703;
     color: white;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
 }
 
 .columns {
@@ -31,6 +30,7 @@ footer {
     cursor: pointer;
     border-radius: 14px;
     border: 1px solid black;
+    padding: 6px;
 } 
 #myBtn:hover {
     background-color: #3a6f01;
@@ -45,11 +45,16 @@ footer {
 }
 
 .logo-img {
-    margin: 10px 0 0 10px;
-    padding: 8px 8px 8px 8px;
-    max-width: 80px;
-    border-radius: 25px;
+    margin: 15px 0 0 15px;
+    max-width: 65px;
+    border-radius: 15px;
+    transition-duration: 1s;
 }
+.logo-img:hover {
+    padding: 4px;
+    background-color: rgb(83, 83, 83);
+}
+
 
 .nav-btn {
     background-color: white;
@@ -63,6 +68,10 @@ footer {
     justify-content: center;
     margin-right: 10px;
 }
+.wrap-nav .nav-btn:hover {
+    font-weight: 600;
+}
+
 .nav-btn:hover {
     background-color: rgb(202, 202, 202);
     color: black;
@@ -101,32 +110,38 @@ footer {
     justify-content: center;
   }
   
-  .dropdown {
+.dropdown {
     position: relative;
     display: inline-block;
-  }
+}
   
-  .dropdown-content {
+.dropdown-content {
     display: none;
     position: absolute;
     background-color: #f1f1f1;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-  }
-  
-  .dropdown-content a {
+}
+ 
+.dropdown-content #nav-btn-dd {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
-    display: block;
-  }
+    border: none;
+    border-radius: 12px;
+    font-size: 16px;
+    display: flex;
+    margin: auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
   
-  .dropdown-content a:hover {background-color: #ddd;}
+.dropdown-content #nav-btn-dd:hover {background-color: #ddd; font-weight: 600;}
   
-  .dropdown:hover .dropdown-content {display: block;}
+.dropdown:hover .dropdown-content {display: block;}
   
-  .dropdown:hover .dropbtn {background-color: rgb(226, 225, 225);}
+.dropdown:hover .dropbtn {background-color: rgb(226, 225, 225);}
 
 /*********************************************************************/
 .slick-carousel {
@@ -189,6 +204,9 @@ footer {
 }
 #arrow:hover {
     color:white;
+
+
+  text-shadow: 0px 0px 8px white;
 }
 
 
@@ -264,11 +282,7 @@ img {
 
 /*********************************************************************/
 
-.footer-clean {
-    background-color: #fff;
-    color: #4b4c4d;
-}
-  
+
 .footer-clean h3 {
     margin-top: 0;
     margin-bottom: 12px;
@@ -321,18 +335,18 @@ img {
 }
   
 .footer-clean .item.social > a {
-    font-size:28px;
-    width:40px;
-    height:40px;
-    line-height:40px;
-    display:inline-block;
-    text-align:center;
-    border-radius:50%;
-    border:1px solid #ffffff;
-    margin-left:10px;
-    margin-top:22px;
-    color:inherit;
-    opacity:0.75;
+    font-size: 28px;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    display: inline-block;
+    text-align: center;
+    border-radius: 50%;
+    border: 1px solid #ffffff;
+    margin-left: 10px;
+    margin-top: 22px;
+    color: inherit;
+    opacity: 0.75;
 }
   
 .footer-clean .item.social > a:hover {
