--- a/style.css
+++ b/style.css
@@ -6,10 +6,14 @@ body {
 header{
     background-color: black;
 }
+main {
+    font-family: "Audiowide",sans-serif;
+}
 footer {
     background-color: #6ea703;
     color: white;
     padding-bottom: 10px;
+    font-family: "Audiowide",sans-serif;
 }
 
 .columns {
@@ -42,6 +46,7 @@ footer {
     display: flex;
     align-items: center;
     margin-left: 20px;
+    font-family: "Audiowide", sans-serif;
 }
 
 .logo-img {
@@ -108,7 +113,8 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
-  }
+    font-family: "Audiowide", sans-serif;
+}
   
 .dropdown {
     position: relative;
@@ -135,9 +141,14 @@ footer {
     margin: auto;
     margin-top: 5px;
     margin-bottom: 5px;
+    font-family: "Audiowide", sans-serif;
 }
   
-.dropdown-content #nav-btn-dd:hover {background-color: #ddd; font-weight: 600;}
+.dropdown-content #nav-btn-dd:hover {
+    background-color: #ddd;
+    font-weight: 600;
+    font-family: "Audiowide", sans-serif;
+}
   
 .dropdown:hover .dropdown-content {display: block;}
   
@@ -205,8 +216,7 @@ footer {
 #arrow:hover {
     color:white;
 
-
-  text-shadow: 0px 0px 8px white;
+    text-shadow: 0px 0px 8px white;
 }
 
 
