--- a/style.css
+++ b/style.css
@@ -1,13 +1,28 @@
 body {
-    margin-top: 95px;
+    padding-top: 70px;
     background-color: #6E6E6E;
 }
 
 header{
     background-color: black;
 }
-footer{
-    background-color: #77b408;
+main {
+    font-family: "Audiowide",sans-serif;
+}
+article {
+    font-family: "Kanit", sans-serif;
+}
+footer {
+    background-color: #6ea703;
+    color: white;
+    padding-bottom: 10px;
+    font-family: "Kanit", sans-serif;
+}
+
+.columns {
+    margin-left: 0rem;
+    margin-right: 0rem;
+    margin-top: 0rem;
 }
 
 #myBtn {
@@ -15,14 +30,15 @@ footer{
     position: fixed;
     bottom: 20px;
     right: 30px;
-    font-size: 20px;
-    font-weight: 600;
+    font-size: 25px;
+    font-weight: 900;
     background-color: #43fa27;
     color: black;
     cursor: pointer;
-    padding: 15px;
     border-radius: 14px;
     border: 1px solid black;
+    padding: 6px 8px 2px 8px;
+    font-family: none;
 } 
 #myBtn:hover {
     background-color: #3a6f01;
@@ -33,41 +49,50 @@ footer{
 .wrap-nav {
     display: flex;
     align-items: center;
-}
+    margin-left: 20px;
+    font-family: "Kanit", sans-serif;}
 
 .logo-img {
-    margin: 10px 0 0 10px;
-    padding: 8px 8px 8px 8px;
-    max-width: 80px;
-    border-radius: 25px;
+    margin: 15px 0 0 15px;
+    max-width: 65px;
+    border-radius: 15px;
+    transition-duration: 1s;
 }
+.logo-img:hover {
+    padding: 4px;
+    background-color: rgb(83, 83, 83);
+}
+
 
 .nav-btn {
     background-color: white;
     color: black;
-    padding: 9px;
-    font-size: 16px;
+    padding: 7px;
+    font-size: 18px;
     border: none;
     border-radius: 10px;
     display: flex;
     align-items: center;
-    justify-content: center; 
+    justify-content: center;
     margin-right: 10px;
-    display: flex;
 }
+.wrap-nav .nav-btn:hover {
+    font-weight: 600;
+}
+
 .nav-btn:hover {
     background-color: rgb(202, 202, 202);
     color: black;
 }
 
-
 .navbar-fixed {
-    float:none ;
+    float: none;
     background-color: black;
     position: fixed;
     top: 0;
     width: 100%;
     z-index: 1;
+    margin-top: -20px;
 }
 
 .navbar {
@@ -84,45 +109,57 @@ footer{
 .dropbtn {
     background-color: white;
     color: black;
-    padding: 12px;
-    font-size: 16px;
+    padding: 8px;
+    font-size: 18px;
     border: none;
     border-radius: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
-  }
+    font-family: "Kanit", sans-serif;
+}
   
-  .dropdown {
+.dropdown {
     position: relative;
     display: inline-block;
-  }
+}
   
-  .dropdown-content {
+.dropdown-content {
     display: none;
     position: absolute;
     background-color: #f1f1f1;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-  }
-  
-  .dropdown-content a {
+}
+ 
+.dropdown-content #nav-btn-dd {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
-    display: block;
-  }
+    border: none;
+    border-radius: 12px;
+    font-size: 16px;
+    display: flex;
+    margin: auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-family: "Kanit", sans-serif;
+}
   
-  .dropdown-content a:hover {background-color: #ddd;}
+.dropdown-content #nav-btn-dd:hover {
+    background-color: #ddd;
+    font-weight: 600;
+}
   
-  .dropdown:hover .dropdown-content {display: block;}
+.dropdown:hover .dropdown-content {display: block;}
   
-  .dropdown:hover .dropbtn {background-color: rgb(226, 225, 225);}
+.dropdown:hover .dropbtn {background-color: rgb(226, 225, 225);}
 
 /*********************************************************************/
 .slick-carousel {
     max-width: 1650px;
+    margin-left: 4.5%;
 }
 
 .wrap-title {
@@ -174,9 +211,15 @@ footer{
     justify-content: center;
     width: 20px;
     height: 20px;
-    color: white;
+    color: rgba(255, 255, 255, 0.65);
     cursor: pointer;
     font-size: 20px;
+    font-family: none;
+}
+#arrow:hover {
+    color:white;
+
+    text-shadow: 0px 0px 8px white;
 }
 
 
@@ -194,28 +237,24 @@ img {
     object-fit: cover;
     object-position: center;
 }
-.wrap-img {
-    position: relative;
-}
-
 
 .threeArt {
     margin-top: 20px;
 }
 
 
-article {
+#art-one-style {
     padding: 10px;
     background-color: #8b8b8b;
     color: rgb(255, 255, 255);
     border-radius: 20px;
     border: 2px solid rgb(51, 51, 51);
 }
-article img {
+#art-one-style img {
     border: 1px solid gray;
     border-radius: 25px;
 }
-article:hover {
+#art-one-style:hover {
     background-color: #a3e429;
     color: rgb(0, 0, 0);
 }
@@ -251,4 +290,86 @@ article:hover {
 
 .sub-banner a {
     text-decoration: underline;
+}
+
+
+/*********************************************************************/
+
+
+.footer-clean h3 {
+    margin-top: 0;
+    margin-bottom: 12px;
+    font-weight: bold;
+    font-size: 20px;
+}
+  
+.flex-footer {
+    display: flex;
+    justify-content: center;
+}
+.item-2 {
+    margin-left: 30%;
+}
+
+.footer-clean ul {
+    padding: 0;
+    list-style: none;
+    line-height: 1.6;
+    font-size: 18px;
+    margin-bottom: 0;
+}
+  
+.footer-clean ul a {
+    color: inherit;
+    text-decoration: none;
+    opacity: 0.8;
+}
+  
+.footer-clean ul a:hover {
+    opacity:1;
+    font-weight: 600;
+}
+  
+.footer-clean .item.social {
+    text-align:right;
+}
+  
+@media (max-width:767px) {
+    .footer-clean .item {
+        text-align:center;
+        padding-bottom:20px;
+    }
+}
+  
+@media (max-width: 768px) {
+    .footer-clean .item.social {
+        text-align:center;
+    }
+}
+  
+.footer-clean .item.social > a {
+    font-size: 28px;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    display: inline-block;
+    text-align: center;
+    border-radius: 50%;
+    border: 1px solid #ffffff;
+    margin-left: 10px;
+    margin-top: 22px;
+    color: inherit;
+    opacity: 0.75;
+}
+  
+.footer-clean .item.social > a:hover {
+    opacity:1;
+}
+  
+  
+.footer-clean .copyright {
+    margin-top:14px;
+    margin-bottom:0;
+    font-size: 14px;
+    opacity:0.6;
 }
