--- a/style.css
+++ b/style.css
@@ -1,7 +1,26 @@
 body {
     padding-top: 70px;
     background-color: #6E6E6E;
+    overflow: hidden;
 }
+
+
+
+body::-webkit-scrollbar {
+    width: 12px;               /* width of the entire scrollbar */
+  }
+  
+  body::-webkit-scrollbar-track {
+    background: rgb(0, 90, 0);        /* color of the tracking area */
+  }
+  
+  body::-webkit-scrollbar-thumb {
+    background-color: lime;    /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */
+    border: 3px solid rgb(0, 196, 0);  /* creates padding around scroll thumb */
+  }
+
+
 
 header{
     background-color: black;
