--- a/style.css
+++ b/style.css
@@ -69,8 +69,9 @@ footer {
     display: flex;
     align-items: center;
     margin-left: 20px;
-    font-family: "Kanit", sans-serif;}
-
+    font-family: "Kanit", sans-serif;
+    margin-top: 10px;
+}
 .logo-img {
     margin: 15px 0 0 15px;
     max-width: 65px;
@@ -305,6 +306,7 @@ img {
     font-size: 25px;
     font-weight: 900;
     border-radius: 15px;
+    border: 2px solid rgb(7, 89, 0);
 }
 
 .sub-banner a {
