--- a/style.css
+++ b/style.css
@@ -7,17 +7,17 @@ body {
 
 
 body::-webkit-scrollbar {
-    width: 14px;               /* width of the entire scrollbar */
+    width: 14px;
 }
 
 body::-webkit-scrollbar-track {
-    background: rgb(0, 90, 0);        /* color of the tracking area */
+    background: rgb(0, 90, 0);
 }
 
 body::-webkit-scrollbar-thumb {
-    background-color: lime;    /* color of the scroll thumb */
-    border-radius: 20px;       /* roundness of the scroll thumb */
-    border: 3.5px solid rgb(0, 90, 0);  /* creates padding around scroll thumb */
+    background-color: lime;
+    border-radius: 20px;
+    border: 3.5px solid rgb(0, 90, 0);
 }
 
 
@@ -64,26 +64,25 @@ footer {
     color: white;
 }
 
+/*********************************************************************/
 
-.wrap-nav {
-    display: flex;
-    align-items: center;
-    margin-left: 20px;
-    font-family: "Kanit", sans-serif;
-    margin-top: 10px;
-}
 .logo-img {
-    margin: 15px 0 0 15px;
+    margin: 15px 20px 0 0;
     max-width: 65px;
     border-radius: 15px;
-    transition-duration: 1s;
+    transition-duration: .7s;
 }
 .logo-img:hover {
     padding: 4px;
     background-color: #5c8556;
-
 }
 
+/*********************************************************************/
+    
+.nav-placement {
+    display: flex;
+    justify-content: space-between;
+}
 
 .nav-btn {
     background-color: white;
@@ -92,9 +91,6 @@ footer {
     font-size: 18px;
     border: none;
     border-radius: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     margin-right: 10px;
 }
 .wrap-nav .nav-btn:hover {
@@ -107,7 +103,6 @@ footer {
 }
 
 .navbar-fixed {
-    float: none;
     background-color: black;
     position: fixed;
     top: 0;
@@ -121,61 +116,80 @@ footer {
     text-align: center;
 }
 
-.navbar a {
-    color: rgb(0, 0, 0);
-    text-decoration: none;
-    display: inline-block;
-}
+/*********************************************************************/
 
-.dropbtn {
-    background-color: white;
-    color: black;
-    padding: 8px;
-    font-size: 18px;
-    border: none;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: "Kanit", sans-serif;
-}
-  
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-  
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+#menu__toggle {
+    opacity: 0;
+  }
+  #menu__toggle:checked + .menu__btn > span {
+    transform: rotate(45deg);
+  }
+  #menu__toggle:checked + .menu__btn > span::before {
+    top: 0;
+    transform: rotate(0deg);
+  }
+  #menu__toggle:checked + .menu__btn > span::after {
+    top: 0;
+    transform: rotate(90deg);
+  }
+  #menu__toggle:checked ~ .menu__box {
+    left: 0 !important;
+  }
+  .menu__btn {
+    position: fixed;
+    top: 20px;
+    width: 26px;
+    padding-bottom: 10px;
+    padding-top: 15px;
+    cursor: pointer;
     z-index: 1;
-}
- 
-.dropdown-content #nav-btn-dd {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    border: none;
-    border-radius: 12px;
-    font-size: 16px;
-    display: flex;
-    margin: auto;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    font-family: "Kanit", sans-serif;
-}
-  
-.dropdown-content #nav-btn-dd:hover {
-    background-color: #ddd;
+  }
+  .menu__btn > span,
+  .menu__btn > span::before,
+  .menu__btn > span::after {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #ffffff;
+    transition-duration: .25s;
+  }
+  .menu__btn > span::before {
+    content: '';
+    top: -8px;
+  }
+  .menu__btn > span::after {
+    content: '';
+    top: 8px;
+  }
+  .menu__box {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 300px;
+    height: 100%;
+    margin: 0;
+    padding: 80px 0;
+    list-style: none;
+    background-color: #3e7745;
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, .5);
+    transition-duration: .25s;
+  }
+  .menu__item {
+    display: block;
+    padding: 12px 24px;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
     font-weight: 600;
-}
-  
-.dropdown:hover .dropdown-content {display: block;}
-  
-.dropdown:hover .dropbtn {background-color: rgb(226, 225, 225);}
+    text-decoration: none;
+    transition-duration: .25s;
+  }
+  .menu__item:hover {
+    background-color: #CFD8DC;
+  }
+
 
 /*********************************************************************/
 .slick-carousel {
