--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     padding-top: 70px;
-    background-color: #2a4326b4;
+    background-color: #383838c8;
     overflow: hidden;
 }
 
@@ -280,7 +280,7 @@ img {
 
 #art-one-style {
     padding: 10px;
-    background-color: #57654f;
+    background-color: #4a4a4a;
     color: rgb(255, 255, 255);
     border-radius: 20px;
 }
